kuber/1.5/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-kube-frontend
  labels:
    app: netology-kube-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netology-kube-frontend
  template:
    metadata:
      labels:
        app: netology-kube-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          name: http-port
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "1"
---
