kuber/1.5/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-kube-backend
spec:
  selector:
    app: netology-kube-backend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 80
      targetPort: 8080
---
