kuber/1.5/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-kube-frontend
spec:
  selector:
    app: netology-kube-frontend
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
---
